objects/vlocity_ins__ProductJurisdictionNetwork__c.object
<CustomObject>
    <description>Identifies a Network that provides benefits for a given Plan Type (i.e. product) under a given jurisdiction. Used when an insurance plan is sold across multiple jurisdictions under different provider networks. For example Simplicity/Plan 160 is sold in state of Illinois(IL) and Florida (FL). In FL it is available under the HMO Select Network but in IL same plan is available under HMO Select &amp; Loyola CCN networks.</description>
    <fields>
        <fullName>vlocity_ins__JurisdictionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the jurisdiction where the insurance product/plan is available.</description>
        <label>Jurisdiction</label>
        <referenceTo>vlocity_ins__Jurisdiction__c</referenceTo>
        <relationshipLabel>ProductJurisdictionNetworks</relationshipLabel>
        <relationshipName>ProductJurisdictionNetworks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the insurance product/plan.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Jurisdiction Networks</relationshipLabel>
        <relationshipName>JurisdictionNetworks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderNetworkId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the Providers Network which is accepting the insurance</description>
        <label>Provider Network</label>
        <referenceTo>vlocity_ins__ProviderNetwork__c</referenceTo>
        <relationshipLabel>NetworksProductJurisdictions</relationshipLabel>
        <relationshipName>NetworksProductJurisdictions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Jurisdiction Network</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Jurisdiction Networks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>vlocity_ins__ProductId</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( vlocity_ins__Product2Id__c )</errorConditionFormula>
        <errorDisplayField>vlocity_ins__Product2Id__c</errorDisplayField>
        <errorMessage>Product Id should not be blank.</errorMessage>
    </validationRules>
</CustomObject>